# fastapi-devops-demo

./: .bandit  .dockerignore  .flake8  Dockerfile  github_actions_detailed_explanation.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: fastapi-devops-demo.yml  fastapi-docker-ci.yml
app/: config.py  routes.py  schemas.py
tests/: test_main.py
